[gd_scene load_steps=2 format=3 uid="uid://cqv8j5xr2yh3p"]

[ext_resource type="Script" path="res://scenes/debug/wasteland_color_preview.gd" id="1_script"]

[node name="WastelandColorPreview" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.12, 0.1, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 24

[node name="Title" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 48
text = "Wasteland Color Palette Preview"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.836, 0.836, 0.836, 1)
theme_override_font_sizes/font_size = 20
text = "Phase 8.1 - Visual Identity Colors"
horizontal_alignment = 1

[node name="HSeparator1" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="PrimaryColors" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="SectionTitle" type="Label" parent="ScrollContainer/VBoxContainer/PrimaryColors"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
text = "Primary Colors (Rust & Oxidation)"

[node name="ColorGrid1" type="GridContainer" parent="ScrollContainer/VBoxContainer/PrimaryColors"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 12
columns = 3

[node name="HSeparator2" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HazardColors" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="SectionTitle" type="Label" parent="ScrollContainer/VBoxContainer/HazardColors"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
text = "Hazard Warning Colors (Road Signs, Caution Tape)"

[node name="ColorGrid2" type="GridContainer" parent="ScrollContainer/VBoxContainer/HazardColors"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 12
columns = 3

[node name="HSeparator3" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="DangerColors" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="SectionTitle" type="Label" parent="ScrollContainer/VBoxContainer/DangerColors"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
text = "Danger Colors (Blood, Emergency)"

[node name="ColorGrid3" type="GridContainer" parent="ScrollContainer/VBoxContainer/DangerColors"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 12
columns = 3

[node name="HSeparator4" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="NeutralColors" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="SectionTitle" type="Label" parent="ScrollContainer/VBoxContainer/NeutralColors"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
text = "Neutral Colors (Weathered Materials)"

[node name="ColorGrid4" type="GridContainer" parent="ScrollContainer/VBoxContainer/NeutralColors"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 12
columns = 3

[node name="HSeparator5" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="AccentColors" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="SectionTitle" type="Label" parent="ScrollContainer/VBoxContainer/AccentColors"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
text = "Accent Colors (Scavenged Tech)"

[node name="ColorGrid5" type="GridContainer" parent="ScrollContainer/VBoxContainer/AccentColors"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 12
columns = 3
